--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/parser": "^5.47.1",
     "axios": "^1.2.2",
     "cra-template-typescript": "1.2.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4"
   },
