--- a/.hintrc
+++ b/.hintrc
@@ -7,7 +7,8 @@
       "default",
       {
         "ignore": [
-          "meta[name=theme-color]"
+          "meta[name=theme-color]",
+          "input[type=date]"
         ]
       }
     ]
