--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.5",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -12,6 +13,8 @@
     "@typescript-eslint/parser": "^5.47.1",
     "axios": "^1.2.2",
     "cra-template-typescript": "1.2.0",
+    "js-cookie": "^3.0.1",
+    "js-cookies": "^1.0.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
